Refactor language system, fixed spawner drop & natural spawners check,...